--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
         <title>Dasmoto's Arts and Crafts</title>
     </head>
     <body>
-        
+        <h1> </h1>
+            <h2></h2>
+                <img>
+                <h3></h3>
+                <p></p>
+            <h2></h2>
+                <img>
+                <h3></h3>
+                <p></p>
+            <h2></h2>
+                <img>
+                <h3></h3>
+                <p></p>
     </body>
 </html>
